--- a/data.ipynb
+++ b/data.ipynb
@@ -2,21 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "bbfba2c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             EGID GDEKT  GGDENR     GGDENAME           EGRID  LGBKR LPARZ  \\\n",
+      "0       101005421    BE     301      Aarberg  CH853146313578    0.0  1573   \n",
+      "1       101005422    BE     301      Aarberg  CH863146353186    0.0  1574   \n",
+      "2       101005428    BE     301      Aarberg  CH863146353186    0.0  1574   \n",
+      "3       101005430    BE     301      Aarberg  CH863146353186    0.0  1574   \n",
+      "4        11513774    BE     301      Aarberg  CH494637393527    0.0   707   \n",
+      "...           ...   ...     ...          ...             ...    ...   ...   \n",
+      "476924    9014913    BE     995  Wiedlisbach  CH694631063515    0.0   106   \n",
+      "476925    9014914    BE     995  Wiedlisbach  CH734631353589    0.0   879   \n",
+      "476926    9032117    BE     995  Wiedlisbach  CH213514463166    0.0   414   \n",
+      "476927    9040413    BE     995  Wiedlisbach  CH123114463526    0.0   466   \n",
+      "476928    9040422    BE     995  Wiedlisbach  CH343546312042    0.0   377   \n",
+      "\n",
+      "        LPARZSX  LTYP GEBNR  ... GWAERDATH2  GWAERZW1   GENW1  GWAERSCEW1  \\\n",
+      "0           NaN   NaN   NaN  ...        NaN    7630.0  7520.0       869.0   \n",
+      "1           NaN   NaN   NaN  ...        NaN    7630.0  7520.0       869.0   \n",
+      "2           NaN   NaN   NaN  ...        NaN    7630.0  7520.0       869.0   \n",
+      "3           NaN   NaN   NaN  ...        NaN    7630.0  7520.0       869.0   \n",
+      "4           NaN   NaN   NaN  ...        NaN    7600.0  7500.0       869.0   \n",
+      "...         ...   ...   ...  ...        ...       ...     ...         ...   \n",
+      "476924      NaN   NaN   NaN  ...        NaN    7630.0  7530.0       855.0   \n",
+      "476925      NaN   NaN   NaN  ...        NaN    7630.0  7530.0       855.0   \n",
+      "476926      NaN   NaN   NaN  ...        NaN       NaN     NaN         NaN   \n",
+      "476927      NaN   NaN   NaN  ...        NaN       NaN     NaN         NaN   \n",
+      "476928      NaN   NaN   NaN  ...        NaN       NaN     NaN         NaN   \n",
+      "\n",
+      "        GWAERDATW1  GWAERZW2   GENW2  GWAERSCEW2  GWAERDATW2     GEXPDAT  \n",
+      "0       2002-06-07       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "1       2002-06-07       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "2       2002-06-07       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "3       2002-06-07       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "4       2017-04-18    7600.0  7500.0       869.0  2017-04-18  2025-05-16  \n",
+      "...            ...       ...     ...         ...         ...         ...  \n",
+      "476924  2022-07-18       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "476925  2019-09-03       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "476926         NaN       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "476927         NaN       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "476928         NaN       NaN     NaN         NaN         NaN  2025-05-16  \n",
+      "\n",
+      "[476929 rows x 47 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the CSV file\n",
-    "df = pd.read_csv(\"gebaeude_batiment_edificio.csv\", sep=\"\\t\", low_memory=False)"
+    "df = pd.read_csv(\"gebaeude_batiment_edificio.csv\", sep=\"\\t\", low_memory=False)\n",
+    "df.head()\n",
+    "print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "27c1da19",
    "metadata": {},
    "outputs": [
@@ -57,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "b43ae0c2",
    "metadata": {},
    "outputs": [
@@ -80,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "48f2c539",
    "metadata": {},
    "outputs": [
@@ -142,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "95e174af",
    "metadata": {},
    "outputs": [
@@ -184,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "29392c66",
    "metadata": {},
    "outputs": [],
@@ -194,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "06a7c585",
    "metadata": {},
    "outputs": [
